<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/checkin"
        android:icon="@drawable/ic_check_in_24dp"
        android:orderInCategory="200"
        android:title="@string/check_in"
        app:showAsAction="always" />

    <item
        android:id="@+id/queue"
        android:orderInCategory="80"
        android:title="@string/queue"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/settings"
        android:orderInCategory="90"
        android:title="@string/setting"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="collapseActionView" />

</menu>